fixed footer z-index (mobile) and some navbar bugs, and made logout btn in collapse navbar.

--- a/imports/ui/navbar/navbar.scss
+++ b/imports/ui/navbar/navbar.scss
@@ -14,11 +14,17 @@ nav.header {
 .user-info, .user-mail {
   padding-left: 10px;
 }
-.user-info {
-  color: $white;
+.user-data {
+  .user-info {
+    color: $white;
+  }
+  .user-mail {
+    color: #ecf0f1;
+    margin-bottom: 0;
+  }
 }
-.user-mail {
-  color: #ecf0f1;
+.collapse-close-btn {
+  margin-top: 9px;
 }
 .logo-photo {
   height: 40px;
